--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!--Group members 
+Nupur Patel - 200512816
+dev patel - 200510635
+brijrajsinh Mandora - 200512993--> >
 <!DOCTYPE html>
 <html lang="en">
 <head>
